Changed the arrangement of Photographer list from vertical to horizontal

--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,11 @@ body {
   height: 100%;
   max-height: 665px;
 }
+.page{
+  margin-bottom: 3rem;
+}
+.card {
+  margin: auto;
+  border: 3px solid green;
+  padding: 10px;
+}
