--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,26 @@ body {
   height: 100%;
   max-height: 665px;
 }
+#all_cards{
+  display: flex;
+}
+.card{
+  padding: 1rem;
+  margin: 1rem;
+}
+@media (max-width: 600px) {
+  #all_cards {
+    flex-direction: column;
+  }
+  .card{
+    margin: auto;
+  }
+
+}
+.card-body{
+  text-align: center;
+}
+
+.card img{
+  height: 200px;
+}
