--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ body {
 #all_cards{
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 .card{
   padding: 1rem;
